--- a/src/pack/comment.css
+++ b/src/pack/comment.css
@@ -217,3 +217,14 @@
     align-items: center;
     margin-top: 45px;
 }
+
+.detalk-container .filter {
+	opacity: 0.65;
+	padding-left: 3rem;
+	cursor: pointer;
+	/* opacity: 0; */
+	transition: all .3s;
+}
+.detalk-container .cmt_date {
+	opacity: 0.65;
+}
