:sparkles: 深色模式支持

--- a/src/pack/comment.css
+++ b/src/pack/comment.css
@@ -33,11 +33,11 @@
 	background-color: transparent;
 	border-color: rgba(144, 147, 153, 0.31);
 	-webkit-appearance: none;
-	background-color: #fff;
+	background-color: transparent;
 	border-radius: 4px;
 	border: 1px solid #dcdfe6;
 	box-sizing: border-box;
-	color: rgba(0, 0, 0, 0.8);
+	/* color: rgba(0, 0, 0, 0.8); */
 	display: inline-block;
 	height: 40px;
 	line-height: 40px;
@@ -89,11 +89,11 @@
 	background-color: transparent;
 	border-color: rgba(144, 147, 153, 0.31);
 	-webkit-appearance: none;
-	background-color: #fff;
+	/* background-color: #fff; */
 	border-radius: 4px;
 	border: 1px solid #dcdfe6;
 	box-sizing: border-box;
-	color: rgba(0, 0, 0, 0.8);
+	/* color: rgba(0, 0, 0, 0.8); */
 	display: inline-block;
 	height: 40px;
 	line-height: 40px;
@@ -266,15 +266,22 @@
 	padding: 0.2em 0.4em;
     margin: 0;
     font-size: 85%;
-    background-color: #f6f8fa;
+    background-color: rgba(255, 255, 255, 0.05);
     border-radius: 3px;
-    color: currentColor;
+    color: white;
 }
 .detalk-container .cmt-content pre {
 	padding: 16px;
     overflow: auto;
     font-size: 85%;
     line-height: 1.45;
-    background-color: #f6f8fa;
+    background-color: rgba(255, 255, 255, 0.05);
     border-radius: 3px;
+	color: white;
+}
+.detalk-container .cmt-content pre code {
+	background-color: transparent;
+}
+.detalk-container {
+	transition: all .3s;
 }
