--- a/src/pack/comment.css
+++ b/src/pack/comment.css
@@ -35,7 +35,7 @@
 	-webkit-appearance: none;
 	background-color: transparent;
 	border-radius: 4px;
-	border: 1px solid #dcdfe6;
+	border: 1px solid rgba(144,147,153,0.31);
 	box-sizing: border-box;
 	/* color: rgba(0, 0, 0, 0.8); */
 	display: inline-block;
@@ -91,7 +91,7 @@
 	-webkit-appearance: none;
 	/* background-color: #fff; */
 	border-radius: 4px;
-	border: 1px solid #dcdfe6;
+	border: 1px solid rgba(144,147,153,0.31);
 	box-sizing: border-box;
 	/* color: rgba(0, 0, 0, 0.8); */
 	display: inline-block;
@@ -146,7 +146,6 @@
 }
 
 .detalk-container .cm-btn {
-	padding: 9px 15px;
 	font-size: 12px;
 	border-radius: 3px;
 	display: inline-block;
@@ -166,7 +165,7 @@
 	transition: 0.1s;
 	font-weight: 500;
     user-select: none;
-	padding: 12px 20px;
+	padding: 10px 20px;
 	font-size: 14px;
 	border-radius: 4px;
 }
@@ -231,6 +230,8 @@
 .detalk-container hr {
 	margin-top: 20px;
     margin-bottom: 20px;
+	background-color: rgba(144,147,153,0.31);
+	border: 1px solid rgba(144,147,153,0.31);
 }
 
 .detalk_copyright {
