--- a/src/pack/comment.css
+++ b/src/pack/comment.css
@@ -24,7 +24,7 @@
 	border: 1px solid red!important;
 }
 .detalk-container .input-data .input-area input {
-	margin-bottom: 0.5rem;
+	width: 80%;
 	border-top-left-radius: 0;
 	border-bottom-left-radius: 0;
 	height: 32px;
@@ -34,7 +34,7 @@
 	border-color: rgba(144, 147, 153, 0.31);
 	-webkit-appearance: none;
 	background-color: transparent;
-	border-radius: 4px;
+	border-radius: 0 4px 4px 0;
 	border: 1px solid rgba(144,147,153,0.31);
 	box-sizing: border-box;
 	/* color: rgba(0, 0, 0, 0.8); */
@@ -121,6 +121,7 @@
 	background-color: rgba(144, 147, 153, 0.063);
 	border-color: rgba(144, 147, 153, 0.31);
     border-radius: 6px;
+	color: currentColor;
 }
 
 .detalk-container .action-btn-group .action-btn .word-limit {
@@ -285,4 +286,21 @@
 }
 .detalk-container {
 	transition: all .3s;
+}
+.detalk-container .input-label {
+	display: inline-flex;
+    width: 100%;
+    margin-bottom: 0.5rem;
+}
+.detalk-container .input-label label {
+	width: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0,0,0,0.05);
+    border-color: rgba(144, 147, 153, 0.31);
+    border: 1px solid rgba(144,147,153,0.31);
+    border-radius: 4px 0 0 4px;
+	font-size: 0.9rem;
+	opacity: 0.9;
 }
